pkg/lang/testdata/ub/configurations/invalid/alias-not-object.ub
configurations: { aws: 'us-east-1' }
